Add heading to 1SA Final Project pt.2

--- a/1SA Final Project pt.2.ipynb
+++ b/1SA Final Project pt.2.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1><center>Data Science Project</center></h1>\n",
+    "<h2><center>Part 2</center></h2>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
