Add Features in the DataFrame markdown

--- a/1SA Final Project Airbnb.ipynb
+++ b/1SA Final Project Airbnb.ipynb
@@ -31,19 +31,10 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\adiya\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3071: DtypeWarning: Columns (4) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# read csv file\n",
-    "df = pd.read_csv(r\"C:\\Users\\adiya\\Documents\\Uni\\Data Science\\1SA-Final-Project\\AB_US_2020.csv\")"
+    "df = pd.read_csv(r\"C:\\Users\\adiya\\Documents\\Uni\\Data Science\\1SA-Final-Project\\AB_US_2020.csv\", low_memory=False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -171,8 +162,34 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Features in the DataFrame:\n",
+    "0. id: unique id number for each listing\n",
+    "1. name: name of listing\n",
+    "2. host_id: unique host id number\n",
+    "3. host_name: name of host\n",
+    "4. neighbourhood_group: group in which the neighbourhood lies\n",
+    "5. neighbourhood: name of the neighbourhood\n",
+    "6. latitude: latitude of listing\n",
+    "7. longitude: longitude of listing\n",
+    "8. room_type: room type (Entire home/apt, Private room, etc.)\n",
+    "9. price: price of listing per night\n",
+    "10. minimum_nights: minimum number of nights required to book\n",
+    "11. number_of_reviews: total number of reviews on listing\n",
+    "12. last_review: date of last review\n",
+    "13. reviews_per_month: average reviews per month\n",
+    "14. calculated_host_listings_count: total number of listing by host\n",
+    "15. availability_365: number of days a year the listing is available for rent\n",
+    "16. city: region of the listing"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [],
    "metadata": {
