Replace null values in 'reviews_per_month' column

--- a/1SA Final Project Airbnb.ipynb
+++ b/1SA Final Project Airbnb.ipynb
@@ -227,9 +227,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "##### Understanding the features helps gain insight on how to treat null values.\n",
-    "\n",
-    "\n"
+    "##### Understanding the features helps gain insight on how to treat null values."
    ],
    "metadata": {
     "collapsed": false,
@@ -340,8 +338,47 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "The 'reviews_per_month' column provides an average of the reviews. The missing values can be changed\n",
+    "to 0.0, suggesting the listing has a monthly average of 0 reviews.\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# replacing null values in 'reviews_per_month' column with 0\n",
+    "df.fillna({'reviews_per_month': 0}, inplace=True)\n",
+    "# examining changes\n",
+    "df['reviews_per_month'].isnull().sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "outputs": [],
    "source": [],
    "metadata": {
