--- a/1SA Final Project Airbnb.ipynb
+++ b/1SA Final Project Airbnb.ipynb
@@ -378,7 +378,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique 'host_id' listings: 130425\n",
+      "Number of unique 'host_name' listings: 30534\n",
+      "\n",
+      "Number of unique 'id' listings: 226029\n",
+      "Overall number of instances: 226030\n"
+     ]
+    }
+   ],
+   "source": [
+    "# comparing number of unique values\n",
+    "print(\"Number of unique 'host_id' listings:\", df['host_id'].unique().size)\n",
+    "print(\"Number of unique 'host_name' listings:\", df['host_name'].unique().size)\n",
+    "print()\n",
+    "\n",
+    "print(\"Number of unique 'id' listings:\", df['id'].unique().size)\n",
+    "print(\"Overall number of instances:\", len(df))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "As shown above, the 'host_id' column provides a unique identification number for each host.\n",
+    "Meanwhile, the 'host_name' column is insubstantial since various hosts could have the same name.\n",
+    "Moreover, the 'id' column is individual for each listing. Both columns are useless for research\n",
+    "and will be removed."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                                                name  host_id neighbourhood  \\\n0    Charming Victorian home - twin beds + breakfast   165529         28804   \n1                                   French Chic Loft   427027         28801   \n2  Walk to stores/parks/downtown. Fenced yard/Pet...   320564         28801   \n\n   latitude  longitude        room_type  price  minimum_nights  \\\n0  35.65146  -82.62792     Private room     60               1   \n1  35.59779  -82.55540  Entire home/apt    470               1   \n2  35.60670  -82.55563  Entire home/apt     75              30   \n\n   number_of_reviews last_review  reviews_per_month  \\\n0                138    16/02/20               1.14   \n1                114    07/09/20               1.03   \n2                 89    30/11/19               0.81   \n\n   calculated_host_listings_count  availability_365       city  \n0                               1                 0  Asheville  \n1                              11               288  Asheville  \n2                               2               298  Asheville  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>host_id</th>\n      <th>neighbourhood</th>\n      <th>latitude</th>\n      <th>longitude</th>\n      <th>room_type</th>\n      <th>price</th>\n      <th>minimum_nights</th>\n      <th>number_of_reviews</th>\n      <th>last_review</th>\n      <th>reviews_per_month</th>\n      <th>calculated_host_listings_count</th>\n      <th>availability_365</th>\n      <th>city</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Charming Victorian home - twin beds + breakfast</td>\n      <td>165529</td>\n      <td>28804</td>\n      <td>35.65146</td>\n      <td>-82.62792</td>\n      <td>Private room</td>\n      <td>60</td>\n      <td>1</td>\n      <td>138</td>\n      <td>16/02/20</td>\n      <td>1.14</td>\n      <td>1</td>\n      <td>0</td>\n      <td>Asheville</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>French Chic Loft</td>\n      <td>427027</td>\n      <td>28801</td>\n      <td>35.59779</td>\n      <td>-82.55540</td>\n      <td>Entire home/apt</td>\n      <td>470</td>\n      <td>1</td>\n      <td>114</td>\n      <td>07/09/20</td>\n      <td>1.03</td>\n      <td>11</td>\n      <td>288</td>\n      <td>Asheville</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Walk to stores/parks/downtown. Fenced yard/Pet...</td>\n      <td>320564</td>\n      <td>28801</td>\n      <td>35.60670</td>\n      <td>-82.55563</td>\n      <td>Entire home/apt</td>\n      <td>75</td>\n      <td>30</td>\n      <td>89</td>\n      <td>30/11/19</td>\n      <td>0.81</td>\n      <td>2</td>\n      <td>298</td>\n      <td>Asheville</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dropping 'host_name' and 'id' columns\n",
+    "df.drop(['host_name', 'id'], axis=1, inplace=True)\n",
+    "# examining the changes\n",
+    "df.head(3)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(226030, 14)"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# number of columns changed to 14\n",
+    "df.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "outputs": [],
    "source": [],
    "metadata": {
