Change neighbourhood description in 'Features in the DataFrame'

--- a/1SA Final Project Airbnb.ipynb
+++ b/1SA Final Project Airbnb.ipynb
@@ -170,7 +170,7 @@
     "2. host_id: unique host id number\n",
     "3. host_name: name of host\n",
     "4. neighbourhood_group: group in which the neighbourhood lies\n",
-    "5. neighbourhood: name of the neighbourhood\n",
+    "5. neighbourhood: zip code\n",
     "6. latitude: latitude of listing\n",
     "7. longitude: longitude of listing\n",
     "8. room_type: room type (Entire home/apt, Private room, etc.)\n",
@@ -341,7 +341,7 @@
    "cell_type": "markdown",
    "source": [
     "The 'reviews_per_month' column provides an average of the reviews. The missing values can be changed\n",
-    "to 0.0, suggesting the listing has a monthly average of 0 reviews.\n"
+    "to 0.0, suggesting the listing has a monthly average of 0 reviews."
    ],
    "metadata": {
     "collapsed": false,
@@ -397,7 +397,6 @@
     "print(\"Number of unique 'host_id' listings:\", df['host_id'].unique().size)\n",
     "print(\"Number of unique 'host_name' listings:\", df['host_name'].unique().size)\n",
     "print()\n",
-    "\n",
     "print(\"Number of unique 'id' listings:\", df['id'].unique().size)\n",
     "print(\"Overall number of instances:\", len(df))"
    ],
@@ -476,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
